// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add sourcemap to import-css.tsx if NODE_ENV === 'production' 1`] = `

File: import-css.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from 'react-emotion'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div className={className}>
          <span>
            hello
          </span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from 'react-emotion';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div className={className}>
      <span>
      hello
      </span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-css.tsx with autoLabel false 1`] = `

File: import-css.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from 'react-emotion'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div className={className}>
          <span>
            hello
          </span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from 'react-emotion';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImltcG9ydC1jc3MudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUlrQiIsImZpbGUiOiJpbXBvcnQtY3NzLnRzeCIsInNvdXJjZVJvb3QiOiJ0ZXN0cy9maXh0dXJlcyJ9 */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div className={className}>
      <span>
      hello
      </span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-css.tsx with default configs 1`] = `

File: import-css.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from 'react-emotion'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div className={className}>
          <span>
            hello
          </span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from 'react-emotion';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;", "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImltcG9ydC1jc3MudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUlrQiIsImZpbGUiOiJpbXBvcnQtY3NzLnRzeCIsInNvdXJjZVJvb3QiOiJ0ZXN0cy9maXh0dXJlcyJ9 */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div className={className}>
      <span>
      hello
      </span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform import-css.tsx with sourcemap false 1`] = `

File: import-css.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import { css } from 'react-emotion'
  
  const className = css({
    color: 'red',
    background: 'yellow',
  })
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <div className={className}>
          <span>
            hello
          </span>
        </div>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import React from 'react';
  import ReactDOM from 'react-dom';
  import { css } from 'react-emotion';
  const className = /*#__PURE__*/ css({
    color: 'red',
    background: 'yellow',
  }, "label:className;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<div className={className}>
      <span>
      hello
      </span>
    </div>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;
